feat: migrate to shell-based skill structure
- Add SKILL.md for pi skill definition
- Add shell scripts in scripts/: run.sh, list.sh, status.sh, attach.sh, stop.sh, cleanup.sh
- Add library modules in lib/: config.sh, github.sh, worktree.sh, tmux.sh
- Update README.md with new usage instructions
- Update CLAUDE.md with shell development guidelines
- Remove package.json and tsconfig.json (TypeScript no longer used)
- Update .gitignore for shell-based development

Closes #1

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@ orch
 .env
 .env.local
 .env.*.local
+.envrc
 
 # Logs
 *.log
@@ -46,3 +47,6 @@ temp/
 
 # Pi Agent
 .pi
+
+# Config file (user-specific)
+.pi-issue-runner.yml
