chore: integrate shellcheck into CI and development workflow
- Add .shellcheckrc for project-wide configuration
- Add --shellcheck and --all options to scripts/test.sh
- Update CI workflow to use severity: warning and -x option
- Fix SC2034 warnings (unused variables) in scripts and lib
- Update AGENTS.md with shellcheck installation and usage docs

Refs #224

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,7 +19,10 @@ jobs:
         uses: ludeeus/action-shellcheck@master
         with:
           scandir: "./scripts ./lib"
-          severity: error
+          severity: warning
+          additional_files: "install.sh uninstall.sh"
+        env:
+          SHELLCHECK_OPTS: "-x"
 
   unit-tests:
     name: Unit Tests
