--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -48,18 +48,13 @@ jobs:
           sudo apt-get update
           sudo apt-get install -y gh
 
+      - name: Install Bats
+        run: |
+          git clone https://github.com/bats-core/bats-core.git
+          cd bats-core
+          sudo ./install.sh /usr/local
+
       - name: Run unit tests
         run: |
-          echo "=== Running unit tests ==="
-          FAILED=0
-          for f in test/*_test.sh; do
-            echo ""
-            echo "========================================"
-            echo "Running: $f"
-            echo "========================================"
-            if ! bash "$f"; then
-              echo "FAILED: $f"
-              FAILED=1
-            fi
-          done
-          exit $FAILED
+          echo "=== Running Bats tests ==="
+          ./scripts/test.sh
