feat: 計画書の自動ローテーション機能を追加
- lib/config.sh: plans.keep_recent と plans.dir 設定を追加
- scripts/cleanup.sh: --rotate-plans オプションを追加（直近N件を保持）
- scripts/watch-session.sh: タスク完了後に自動ローテーション実行
- .pi-runner.yaml: plans設定セクションを追加（デフォルト: 10件保持）

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -58,6 +58,16 @@ workflow:
     - merge
 
 # =====================================
+# 計画書設定
+# =====================================
+plans:
+  # 保持する計画書の件数（0 = 全て保持）
+  keep_recent: 10
+  
+  # 計画書ディレクトリ
+  dir: "docs/plans"
+
+# =====================================
 # Hook設定
 # =====================================
 hooks:
