docs: .pi-runner.yaml に agent と github セクションを追加
- agent: マルチエージェント対応設定（type, command, template, args）
- github: Issueコメント取得設定（include_comments, max_comments）
- pi セクションは後方互換性のため残存

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -25,16 +25,46 @@ tmux:
   start_in_session: true
 
 # =====================================
-# piコマンド設定
+# エージェント設定
 # =====================================
-pi:
-  # piコマンドのパス
-  command: "pi"
+agent:
+  # エージェントタイプ: pi | claude | opencode | custom
+  # 空の場合は pi セクションの設定を使用（後方互換性）
+  type: "pi"
 
-  # piに渡す追加引数（必要に応じてコメント解除）
+  # カスタムコマンド（type: custom の場合に使用）
+  # command: "my-agent"
+
+  # カスタムテンプレート（type: custom の場合に使用）
+  # 利用可能な変数: {{command}}, {{args}}, {{prompt_file}}
+  # template: "{{command}} {{args}} < {{prompt_file}}"
+
+  # エージェントに渡す追加引数
   # args:
   #   - --model
   #   - claude-sonnet-4-20250514
+
+# =====================================
+# piコマンド設定（後方互換性のため残存）
+# =====================================
+pi:
+  # piコマンドのパス（agent.type が空の場合に使用）
+  command: "pi"
+
+  # piに渡す追加引数（agent.type が空の場合に使用）
+  # args:
+  #   - --model
+  #   - claude-sonnet-4-20250514
+
+# =====================================
+# GitHub設定
+# =====================================
+github:
+  # Issueのコメントをプロンプトに含める
+  include_comments: true
+
+  # 最大コメント数（0 = 無制限）
+  max_comments: 10
 
 # =====================================
 # 並列実行設定
