--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Run ShellCheck
         uses: ludeeus/action-shellcheck@master
         with:
-          scandir: "./scripts ./lib"
+          scandir: "."
           severity: warning
           additional_files: "install.sh uninstall.sh"
         env:
