docs: add agents section to sample config
Add agents configuration example to sample-config.yaml to demonstrate
the feature documented in docs/configuration.md.

Refs #378

--- a/test/fixtures/sample-config.yaml
+++ b/test/fixtures/sample-config.yaml
@@ -16,3 +16,10 @@ pi:
 github:
   include_comments: true
   max_comments: 10
+
+# エージェントテンプレートファイルパスのカスタマイズ
+agents:
+  plan: custom/agents/plan.md
+  implement: custom/agents/implement.md
+  review: custom/agents/review.md
+  merge: custom/agents/merge.md
