--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -100,6 +100,19 @@ plans:
   dir: "docs/plans"
 
 # =====================================
+# improve-logs設定
+# =====================================
+improve_logs:
+  # 保持するログファイルの件数（0 = 全て保持）
+  keep_recent: 10
+  
+  # 保持するログファイルの日数（0 = 日数制限なし）
+  keep_days: 7
+  
+  # ログファイルの保存ディレクトリ
+  dir: ".improve-logs"
+
+# =====================================
 # Hook設定
 # =====================================
 hooks:
