--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -15,6 +15,13 @@ worktree:
     - .envrc
 
 # =====================================
+# マルチプレクサ設定
+# =====================================
+multiplexer:
+  # 使用するマルチプレクサ: tmux | zellij
+  type: "zellij"
+
+# =====================================
 # tmux設定
 # =====================================
 tmux:
@@ -105,10 +112,10 @@ plans:
 improve_logs:
   # 保持するログファイルの件数（0 = 全て保持）
   keep_recent: 10
-  
+
   # 保持するログファイルの日数（0 = 日数制限なし）
   keep_days: 7
-  
+
   # ログファイルの保存ディレクトリ
   dir: ".improve-logs"
 
