--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -19,16 +19,12 @@ worktree:
 # =====================================
 multiplexer:
   # 使用するマルチプレクサ: tmux | zellij
-  type: "zellij"
+  type: "tmux"
 
-# =====================================
-# tmux設定
-# =====================================
-tmux:
   # セッション名のプレフィックス（例: pi-issue-42）
   session_prefix: "pi"
 
-  # tmuxセッション内で起動するか
+  # セッション内で起動するか
   start_in_session: true
 
 # =====================================
