feat: auto 選択の provider/model を .pi-runner.yaml で設定可能に
- config.sh: auto.provider / auto.model のマッピング追加
- workflow-selector.sh: 環境変数 > .pi-runner.yaml > agent設定推定 > デフォルトの優先順位
- .pi-runner.yaml: auto セクション追加
- ドキュメント更新（README, docs/configuration.md, docs/workflows.md）
- テスト3件追加（config からの読み取り、優先順位）

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -81,6 +81,17 @@ workflow:
     - merge
 
 # =====================================
+# auto ワークフロー選択設定
+# =====================================
+auto:
+  # auto選択用のAIプロバイダー（省略時: agent設定から推定 or anthropic）
+  provider: anthropic
+
+  # auto選択用のモデル（軽量・高速なモデル推奨）
+  # 省略時: claude-3-5-haiku-20241022
+  model: claude-3-5-haiku-20241022
+
+# =====================================
 # 複数ワークフロー定義
 # -w 省略時は auto（AIがIssue内容から自動選択）
 # =====================================
