fix: .pi-runner.yaml から workflow:(単数形)を削除し workflows.default に移行

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -67,20 +67,6 @@ parallel:
   max_concurrent: 5
 
 # =====================================
-# ワークフロー設定（デフォルト・後方互換）
-# =====================================
-workflow:
-  # ワークフロー名
-  name: default
-
-  # 実行するステップ
-  steps:
-    - plan
-    - implement
-    - review
-    - merge
-
-# =====================================
 # auto ワークフロー選択設定
 # =====================================
 auto:
@@ -96,6 +82,15 @@ auto:
 # -w 省略時は auto（AIがIssue内容から自動選択）
 # =====================================
 workflows:
+  # 標準: 計画→実装→レビュー→マージ
+  default:
+    description: 標準ワークフロー（計画・実装・レビュー・マージ）
+    steps:
+      - plan
+      - implement
+      - review
+      - merge
+
   # 機能追加: 計画→実装→テスト→レビュー→マージ
   feature:
     description: 新機能・大規模変更（lib/scripts への新関数追加、新スクリプト作成）
