fix: 回帰テストがtest.shとCIで実行されるように修正
- scripts/test.sh: test/regression/*.bats を デフォルト実行に追加
- scripts/test.sh: regression ターゲットを追加
- .github/workflows/ci.yaml: regression-tests ジョブを追加

Refs #1026

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -129,3 +129,56 @@ jobs:
         env:
           BATS_JOBS: 4
           BATS_FAST_MODE: 1
+
+  regression-tests:
+    name: Regression Tests
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Cache dependencies
+        uses: actions/cache@v4
+        id: cache-deps
+        with:
+          path: |
+            /usr/local/bin/bats
+            /usr/local/libexec/bats-core
+            /usr/local/bin/yq
+          key: ${{ runner.os }}-deps-v2
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq tmux
+
+      - name: Install yq
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: |
+          YQ_VERSION="v4.40.5"
+          sudo wget -qO /usr/local/bin/yq "https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64"
+          sudo chmod +x /usr/local/bin/yq
+
+      - name: Install gh CLI
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: |
+          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+          sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
+          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+          sudo apt-get update
+          sudo apt-get install -y gh
+
+      - name: Install Bats
+        if: steps.cache-deps.outputs.cache-hit != 'true'
+        run: |
+          git clone --depth 1 https://github.com/bats-core/bats-core.git /tmp/bats-core
+          cd /tmp/bats-core
+          sudo ./install.sh /usr/local
+
+      - name: Run regression tests
+        run: |
+          echo "=== Running Bats tests (regression) ==="
+          ./scripts/test.sh regression
+        env:
+          BATS_JOBS: 4
+          BATS_FAST_MODE: 1
