docs: .pi-runner.yamlにbase_branch設定を追加し、README.mdを実態に合わせて更新
- .pi-runner.yaml: worktree.base_branch を origin/main に設定
- README.md: 設定例を実際のワークフロー定義（default/feature/fix/docs/test/quickfix）に更新
- README.md: agent, parallel, auto, plans セクションを追加

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -8,6 +8,9 @@ worktree:
   # worktreeの作成先ディレクトリ
   base_dir: ".worktrees"
 
+  # デフォルトのベースブランチ（--base オプションで上書き可能）
+  base_branch: "origin/main"
+
   # worktree作成時にコピーするファイル
   copy_files:
     - .env
