feat: add context field to builtin workflows and improve documentation
- Add context field to workflows/{default,simple,thorough,ci-fix}.yaml
- Update docs/workflows.md to clearly document context field support in workflows/*.yaml
- Add tests to verify context field works in workflows/*.yaml files
- Remove unused second parameter from get_workflow_context()

Refs #1040

--- a/workflows/ci-fix.yaml
+++ b/workflows/ci-fix.yaml
@@ -2,3 +2,9 @@ name: ci-fix
 description: CI失敗を検出し自動修正を試行
 steps:
   - ci-fix
+context: |
+  ## ワークフローの方針
+  - CI失敗ログを分析して原因を特定する
+  - 自動修正可能な場合は修正を適用する（フォーマット、lint等）
+  - テスト失敗やビルドエラーはAIによる修正が必要
+  - 最大リトライ回数に達した場合はエスカレーションする
