--- a/workflows/default.yaml
+++ b/workflows/default.yaml
@@ -7,3 +7,9 @@ steps:
   - implement
   - review
   - merge
+context: |
+  ## ワークフローの方針
+  - 計画を立ててから実装を行う
+  - 実装後は必ずレビューを実施
+  - テストを追加・更新する
+  - コミットメッセージは明確に記述する
