--- a/workflows/simple.yaml
+++ b/workflows/simple.yaml
@@ -5,3 +5,8 @@ description: 簡易ワークフロー（実装・マージのみ）
 steps:
   - implement
   - merge
+context: |
+  ## ワークフローの方針
+  - 小規模な修正に最適（typo修正、設定変更、ドキュメント更新等）
+  - 迅速に実装してマージする
+  - 明らかな変更の場合は計画・レビューをスキップ可能
