--- a/workflows/thorough.yaml
+++ b/workflows/thorough.yaml
@@ -6,3 +6,10 @@ steps:
   - test
   - review
   - merge
+context: |
+  ## ワークフローの方針
+  - 重要な機能追加や変更に使用する
+  - 詳細な計画を立ててから実装する
+  - テストを必ず追加・実行する
+  - レビューで品質を確保する
+  - エラーハンドリングとエッジケースを考慮する
