--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,8 +25,26 @@ jobs:
           SHELLCHECK_OPTS: "-x"
 
   unit-tests-lib:
-    name: Unit Tests (Lib)
+    name: Unit Tests (Lib ${{ matrix.shard }})
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        include:
+          # Shard 1: workflow系 + yaml (~340 tests)
+          - shard: "1/4"
+            pattern: "workflow*.bats yaml.bats"
+          # Shard 2: improve系 + config + status (~350 tests)
+          - shard: "2/4"
+            pattern: "improve.bats improve/*.bats config.bats status.bats github.bats"
+          # Shard 3: multiplexer系 + batch + ci系 (~270 tests)
+          - shard: "3/4"
+            pattern: "multiplexer*.bats tmux.bats batch.bats ci-*.bats context.bats"
+          # Shard 4: その他 (~300 tests)
+            # agent, cleanup*, daemon, dashboard, dependency, hooks, log,
+            # marker, notify, priority, session-resolver, template, worktree
+          - shard: "4/4"
+            pattern: "REMAINING"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -45,7 +63,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq tmux
-          # Install gh CLI (not cacheable, always install)
+          # Install gh CLI
           curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
           sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
@@ -66,12 +84,56 @@ jobs:
           cd /tmp/bats-core
           sudo ./install.sh /usr/local
 
-      - name: Run lib unit tests
+      - name: Resolve test files for shard
+        id: resolve
         run: |
-          echo "=== Running Bats tests (lib) ==="
-          ./scripts/test.sh lib
+          PATTERN="${{ matrix.pattern }}"
+          FILES=""
+
+          if [[ "$PATTERN" == "REMAINING" ]]; then
+            # Collect files matched by other shards
+            MATCHED=""
+            MATCHED+=" $(ls test/lib/workflow*.bats test/lib/yaml.bats 2>/dev/null)"
+            MATCHED+=" $(ls test/lib/improve.bats 2>/dev/null) $(ls test/lib/improve/*.bats 2>/dev/null)"
+            MATCHED+=" $(ls test/lib/config.bats test/lib/status.bats test/lib/github.bats 2>/dev/null)"
+            MATCHED+=" $(ls test/lib/multiplexer*.bats test/lib/tmux.bats test/lib/batch.bats 2>/dev/null)"
+            MATCHED+=" $(ls test/lib/ci-*.bats test/lib/context.bats 2>/dev/null)"
+
+            # Get all lib test files, exclude matched ones
+            for f in test/lib/*.bats; do
+              if [[ -f "$f" ]] && ! echo "$MATCHED" | grep -qF "$f"; then
+                FILES+="$f "
+              fi
+            done
+          else
+            for p in $PATTERN; do
+              if [[ "$p" == *"/"* ]]; then
+                # Subdirectory pattern (e.g., improve/*.bats)
+                for f in test/lib/$p; do
+                  [[ -f "$f" ]] && FILES+="$f "
+                done
+              else
+                f="test/lib/$p"
+                [[ -f "$f" ]] && FILES+="$f "
+              fi
+            done
+          fi
+
+          echo "files=$FILES" >> "$GITHUB_OUTPUT"
+          echo "Shard ${{ matrix.shard }} test files:"
+          echo "$FILES" | tr ' ' '\n' | grep -v '^$' | sort
+
+      - name: Run lib unit tests (shard ${{ matrix.shard }})
+        run: |
+          FILES="${{ steps.resolve.outputs.files }}"
+          if [[ -z "$FILES" ]]; then
+            echo "No test files for this shard"
+            exit 0
+          fi
+          echo "=== Running Bats tests (lib shard ${{ matrix.shard }}) ==="
+          # shellcheck disable=SC2086
+          bats --jobs 4 $FILES
         env:
-          BATS_JOBS: 4
           BATS_FAST_MODE: 1
 
   unit-tests-scripts:
@@ -95,7 +157,7 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq tmux
-          # Install gh CLI (not cacheable, always install)
+          # Install gh CLI
           curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
           sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
           echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
