chore: グローバルagentモデルをclaude-opus-4-6に変更

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -50,7 +50,7 @@ agent:
     - --provider
     - anthropic
     - --model
-    - claude-sonnet-4-5
+    - claude-opus-4-6
 
 # =====================================
 # GitHub設定
