--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -57,18 +57,13 @@ jobs:
             /usr/local/bin/bats
             /usr/local/libexec/bats-core
             /usr/local/bin/yq
-          key: ${{ runner.os }}-deps-v2
+          key: ${{ runner.os }}-deps-v3
 
       - name: Install system dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y jq tmux
-          # Install gh CLI
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-          sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          sudo apt-get update
-          sudo apt-get install -y gh
+          # gh and jq are pre-installed on ubuntu-latest runners
+          sudo apt-get update -qq
+          sudo apt-get install -y -qq tmux
 
       - name: Install yq
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -151,18 +146,13 @@ jobs:
             /usr/local/bin/bats
             /usr/local/libexec/bats-core
             /usr/local/bin/yq
-          key: ${{ runner.os }}-deps-v2
+          key: ${{ runner.os }}-deps-v3
 
       - name: Install system dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y jq tmux
-          # Install gh CLI
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-          sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          sudo apt-get update
-          sudo apt-get install -y gh
+          # gh and jq are pre-installed on ubuntu-latest runners
+          sudo apt-get update -qq
+          sudo apt-get install -y -qq tmux
 
       - name: Install yq
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -201,12 +191,13 @@ jobs:
             /usr/local/bin/bats
             /usr/local/libexec/bats-core
             /usr/local/bin/yq
-          key: ${{ runner.os }}-deps-v2
+          key: ${{ runner.os }}-deps-v3
 
       - name: Install system dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y jq tmux
+          # gh and jq are pre-installed on ubuntu-latest runners
+          sudo apt-get update -qq
+          sudo apt-get install -y -qq tmux
 
       - name: Install yq
         if: steps.cache-deps.outputs.cache-hit != 'true'
@@ -214,15 +205,6 @@ jobs:
           YQ_VERSION="v4.40.5"
           sudo wget -qO /usr/local/bin/yq "https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64"
           sudo chmod +x /usr/local/bin/yq
-
-      - name: Install gh CLI
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: |
-          curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
-          sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
-          echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
-          sudo apt-get update
-          sudo apt-get install -y gh
 
       - name: Install Bats
         if: steps.cache-deps.outputs.cache-hit != 'true'
