refactor: extract CI setup steps into composite action
Create .github/actions/setup-deps/action.yaml to consolidate
duplicated dependency installation steps (cache, tmux, yq, Bats)
across 3 CI jobs (unit-tests-lib, unit-tests-scripts, regression-tests).

This reduces ~60 lines of duplicated YAML per job to a single
'uses: ./.github/actions/setup-deps' reference, making version
updates (yq, cache key) a single-point change.

Refs #1178

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,35 +49,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        id: cache-deps
-        with:
-          path: |
-            /usr/local/bin/bats
-            /usr/local/libexec/bats-core
-            /usr/local/bin/yq
-          key: ${{ runner.os }}-deps-v3
-
-      - name: Install system dependencies
-        run: |
-          # gh and jq are pre-installed on ubuntu-latest runners
-          sudo apt-get update -qq
-          sudo apt-get install -y -qq tmux
-
-      - name: Install yq
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: |
-          YQ_VERSION="v4.40.5"
-          sudo wget -qO /usr/local/bin/yq "https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64"
-          sudo chmod +x /usr/local/bin/yq
-
-      - name: Install Bats
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: |
-          git clone --depth 1 https://github.com/bats-core/bats-core.git /tmp/bats-core
-          cd /tmp/bats-core
-          sudo ./install.sh /usr/local
+      - name: Setup dependencies
+        uses: ./.github/actions/setup-deps
 
       - name: Resolve test files for shard
         id: resolve
@@ -142,35 +115,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        id: cache-deps
-        with:
-          path: |
-            /usr/local/bin/bats
-            /usr/local/libexec/bats-core
-            /usr/local/bin/yq
-          key: ${{ runner.os }}-deps-v3
-
-      - name: Install system dependencies
-        run: |
-          # gh and jq are pre-installed on ubuntu-latest runners
-          sudo apt-get update -qq
-          sudo apt-get install -y -qq tmux
-
-      - name: Install yq
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: |
-          YQ_VERSION="v4.40.5"
-          sudo wget -qO /usr/local/bin/yq "https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64"
-          sudo chmod +x /usr/local/bin/yq
-
-      - name: Install Bats
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: |
-          git clone --depth 1 https://github.com/bats-core/bats-core.git /tmp/bats-core
-          cd /tmp/bats-core
-          sudo ./install.sh /usr/local
+      - name: Setup dependencies
+        uses: ./.github/actions/setup-deps
 
       - name: Run scripts unit tests
         run: |
@@ -187,35 +133,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Cache dependencies
-        uses: actions/cache@v4
-        id: cache-deps
-        with:
-          path: |
-            /usr/local/bin/bats
-            /usr/local/libexec/bats-core
-            /usr/local/bin/yq
-          key: ${{ runner.os }}-deps-v3
-
-      - name: Install system dependencies
-        run: |
-          # gh and jq are pre-installed on ubuntu-latest runners
-          sudo apt-get update -qq
-          sudo apt-get install -y -qq tmux
-
-      - name: Install yq
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: |
-          YQ_VERSION="v4.40.5"
-          sudo wget -qO /usr/local/bin/yq "https://github.com/mikefarah/yq/releases/download/${YQ_VERSION}/yq_linux_amd64"
-          sudo chmod +x /usr/local/bin/yq
-
-      - name: Install Bats
-        if: steps.cache-deps.outputs.cache-hit != 'true'
-        run: |
-          git clone --depth 1 https://github.com/bats-core/bats-core.git /tmp/bats-core
-          cd /tmp/bats-core
-          sudo ./install.sh /usr/local
+      - name: Setup dependencies
+        uses: ./.github/actions/setup-deps
 
       - name: Run regression tests
         run: |
