refactor: move improve_logs under improve.logs in config
improve関連設定をimprove:配下に統合:
  improve.review_prompt_file  (新規)
  improve.logs.keep_recent    (旧: improve_logs.keep_recent)
  improve.logs.keep_days      (旧: improve_logs.keep_days)
  improve.logs.dir            (旧: improve_logs.dir)

- 旧形式 improve_logs: も後方互換で引き続きサポート
- JSON Schema に improve セクションを追加、旧 improve_logs を deprecated として維持
- docs/configuration.md, .pi-runner.yaml を新形式に更新
- cleanup.bats: TMPDIR不一致によるテスト失敗を修正

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -194,17 +194,24 @@ plans:
   dir: "docs/plans"
 
 # =====================================
-# improve-logs設定
+# improve 設定
 # =====================================
-improve_logs:
-  # 保持するログファイルの件数（0 = 全て保持）
-  keep_recent: 10
+improve:
+  # カスタムレビュープロンプトファイル
+  # 検索順: この設定 → agents/improve-review.md → .pi/agents/improve-review.md → ビルトイン
+  # テンプレート変数: {{max_issues}}, {{session_label}}, {{review_context}}
+  review_prompt_file: "agents/improve-review.md"
 
-  # 保持するログファイルの日数（0 = 日数制限なし）
-  keep_days: 7
+  # ログ設定
+  logs:
+    # 保持するログファイルの件数（0 = 全て保持）
+    keep_recent: 10
 
-  # ログファイルの保存ディレクトリ
-  dir: ".improve-logs"
+    # 保持するログファイルの日数（0 = 日数制限なし）
+    keep_days: 7
+
+    # ログファイルの保存ディレクトリ
+    dir: ".improve-logs"
 
 # =====================================
 # Hook設定
