feat: add hooks.allow_inline config option for inline hook execution
.pi-runner.yaml にインラインhookコマンドを書いた場合、
hooks.allow_inline: true を設定することで実行が許可される。

従来は環境変数 PI_RUNNER_ALLOW_INLINE_HOOKS=true のみで制御しており、
設定ファイルにhookを書いても実行されない問題があった。

- hooks.allow_inline: true を .pi-runner.yaml に追加
- _execute_hook: 設定ファイル → 環境変数の順で許可を確認
- JSON Schema, docs, テストを更新

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -217,6 +217,10 @@ improve:
 # Hook設定
 # =====================================
 hooks:
+  # インラインコマンドの実行を許可（デフォルト: false）
+  # .pi-runner.yaml にインラインhookを書く場合は true に設定
+  allow_inline: true
+
   # 成功時の通知
   on_success: |
     osascript -e 'display notification "Issue #'"$PI_ISSUE_NUMBER"' が完了しました" with title "Pi Issue Runner" subtitle "✅ 完了" sound name "Glass"'
