improve: strengthen workflow quality to prevent integration bugs
問題: AIエージェントが個々の関数は正しく実装するが、
コンポーネント間の結合で壊れるバグが繰り返し発生していた。

対策:

1. defaultワークフローにtestステップを追加
   plan → implement → test → review → merge
   （以前はtestなしでdefault, thoroughにのみあった）

2. implement.md: 波及影響の事前調査を追加
   - 変更予定の関数の呼び出し元を事前確認
   - 出力フォーマット変更時の影響調査
   - cleanup処理の対応確認

3. test.md: 統合テスト観点を追加
   - 全テストスイート実行を明示（変更関連だけでなく全体）
   - コンポーネント間データ受け渡しのテスト
   - 境界値（空文字列、マルチライン、特殊文字）

4. review.md: 波及影響チェックを最重要観点に
   - 出力フォーマットの一致確認
   - 新リソース作成時のcleanup対応確認
   - set -e環境での戻り値の安全性

5. 回帰テスト追加（yaml-bulk-multiline.bats）
   - yaml_get_bulkのマルチライン値ずれ防止

--- a/workflows/default.yaml
+++ b/workflows/default.yaml
@@ -1,15 +1,16 @@
 # Default workflow for GitHub issue processing
 # Template variables: {{issue_number}}, {{issue_title}}, {{branch_name}}, {{worktree_path}}
 name: default
-description: 完全なワークフロー（計画・実装・レビュー・マージ）
+description: 標準ワークフロー（計画・実装・テスト・レビュー・マージ）
 steps:
   - plan
   - implement
+  - test
   - review
   - merge
 context: |
   ## ワークフローの方針
   - 計画を立ててから実装を行う
-  - 実装後は必ずレビューを実施
-  - テストを追加・更新する
+  - テストは全テストスイートを実行し、既存機能の破壊がないことを確認する
+  - レビューでは変更の波及影響を重点的に確認する
   - コミットメッセージは明確に記述する
