--- a/workflows/thorough.yaml
+++ b/workflows/thorough.yaml
@@ -10,6 +10,7 @@ context: |
   ## ワークフローの方針
   - 重要な機能追加や変更に使用する
   - 詳細な計画を立ててから実装する
-  - テストを必ず追加・実行する
-  - レビューで品質を確保する
+  - 実装前に波及影響を調査し、関連する箇所も合わせて修正する
+  - テストは全テストスイートを実行し、既存機能の破壊がないことを確認する
+  - レビューでは変更の波及影響を重点的に確認する
   - エラーハンドリングとエッジケースを考慮する
