fix: add test step to .pi-runner.yaml workflows (default, test)
workflows/default.yaml を変更しても .pi-runner.yaml の
workflows.default が優先されるため、そちらにも test ステップを追加。

- default: plan → implement → test → review → merge
- test: implement → test → review → merge
- feature, fix: 既にtestステップあり
- docs, quickfix: 軽量タスクのためtestなしを維持

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -87,10 +87,11 @@ auto:
 workflows:
   # 標準: 計画→実装→レビュー→マージ
   default:
-    description: 標準ワークフロー（計画・実装・レビュー・マージ）
+    description: 標準ワークフロー（計画・実装・テスト・レビュー・マージ）
     steps:
       - plan
       - implement
+      - test
       - review
       - merge
 
@@ -160,6 +161,7 @@ workflows:
     description: テスト追加・テスト改善
     steps:
       - implement
+      - test
       - review
       - merge
     context: |
