feat: watcher.force_cleanup_on_timeout 設定を追加
COMPLETEマーカー検出後、PRがマージされない/見つからない場合に
タイムアウトしてもセッションが終了しない問題を解決。

force_cleanup_on_timeout: true を設定すると、PRマージタイムアウト時でも
強制的にクリーンアップを実行してセッションを終了する。

変更内容:
- lib/config.sh: 新設定キー watcher_force_cleanup_on_timeout 追加
- scripts/watch-session.sh: handle_complete でタイムアウト時の分岐追加
- .pi-runner.yaml: force_cleanup_on_timeout: true を有効化
- docs/configuration.md: 設定リファレンス更新
- README.md: watcher設定セクションと説明を追加
- test/scripts/watch-session.bats: テスト4件追加

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -258,3 +258,11 @@ hooks:
   # レビュー完了時
   on_review_complete: |
     osascript -e 'display notification "レビュー完了: '"$PI_REVIEW_ISSUES_COUNT"' 件の問題を発見" with title "Pi Issue Runner" subtitle "🔍 レビュー完了" sound name "Tink"'
+
+# =====================================
+# Watcher設定
+# =====================================
+watcher:
+  # PRマージタイムアウト時に強制クリーンアップ
+  # COMPLETEマーカー検出後、PRがマージされなくてもセッションを終了する
+  force_cleanup_on_timeout: true
