--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -17,6 +17,10 @@ worktree:
     - .env.local
     - .envrc
 
+  # worktree作成時にコピーするディレクトリ（再帰コピー）
+  copy_dirs:
+    - .opencode
+
 # =====================================
 # マルチプレクサ設定
 # =====================================
