feat: call: code-review ステップを追加
- agents/code-review.md: 新規作成
  - 別AIインスタンスによる第三者視点のコードレビュー
  - 実装コンテキストを持たず、純粋に差分からレビュー
- .pi-runner.yaml:
  - code-review ワークフロー定義を追加（sonnet-4-5使用）
  - feature, fix に call: code-review ステップを追加
  - default, test は同一セッション内 review を維持

Refs #1406

--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -104,7 +104,7 @@ workflows:
       - review
       - merge
 
-  # 機能追加: 計画→実装→品質チェック→レビュー→マージ（opencode で高度な処理）
+  # 機能追加: 計画→実装→品質チェック→独立レビュー→マージ
   feature:
     description: 新機能・大規模変更（lib/scripts への新関数追加、新スクリプト作成）
     steps:
@@ -116,7 +116,9 @@ workflows:
       - run: "bats --jobs 2 test/"
         timeout: 600
         description: "Bats テスト"
-      - review
+      - call: code-review
+        timeout: 600
+        description: "独立AIによるコードレビュー"
       - merge
     agent:
       type: opencode
@@ -136,7 +138,7 @@ workflows:
       - 新しい scripts/ には対応する test/scripts/*.bats を必ず作成
       - AGENTS.md のディレクトリ構造を更新すること
 
-  # バグ修正・リファクタリング: 実装→品質チェック→レビュー→マージ
+  # バグ修正・リファクタリング: 実装→品質チェック→独立レビュー→マージ
   fix:
     description: バグ修正・リファクタリング・セキュリティ修正
     steps:
@@ -147,7 +149,9 @@ workflows:
       - run: "bats --jobs 2 test/"
         timeout: 600
         description: "Bats テスト"
-      - review
+      - call: code-review
+        timeout: 600
+        description: "独立AIによるコードレビュー"
       - merge
     context: |
       ## 方針
@@ -194,6 +198,19 @@ workflows:
       - setup/teardown で環境を確実にクリーンアップ
       - 並列実行 (BATS_JOBS=4) でも安定するよう、グローバル状態を汚染しない
       - reset_yaml_cache, _YQ_CHECK_RESULT="" を setup で呼ぶ
+
+  # 独立コードレビュー（call: ステップから呼び出される）
+  code-review:
+    description: 別AIインスタンスによる第三者視点のコードレビュー
+    steps:
+      - code-review
+    agent:
+      type: pi
+      args:
+        - --provider
+        - anthropic
+        - --model
+        - claude-sonnet-4-5
 
   # 簡易修正: 実装→マージのみ（軽量モデルで高速・低コスト、品質チェック不要）
   quickfix:
