--- a/.pi-runner.yaml
+++ b/.pi-runner.yaml
@@ -336,3 +336,7 @@ watcher:
   # PRマージタイムアウト時に強制クリーンアップ
   # COMPLETEマーカー検出後、PRがマージされなくてもセッションを終了する
   force_cleanup_on_timeout: true
+
+  # エラー検知時にターミナルを自動で開いてセッションにアタッチする
+  # Terminal.app以外（Ghostty等）を使用する場合はfalseに設定
+  auto_attach: false
